# GDM-Classifier

./: BUILD  Features_range_data.xlsx  GDM Dataset.csv  GDM_Classifier.ipynb  README.md  WORKSPACE  input_generator.py
deployment/cloud/: gdm-fe.yaml  gdm-server.yaml  gdm-simulator.yaml  mongo-service.yaml
deployment/cloud/terraform/: main.tf
deployment/local/: gdm-fe.yaml  gdm-server.yaml  gdm-simulator.yaml  mongo-service.yaml
deployment/local/terraform/: main.tf
docker/front_end/: Dockerfile
docker/server/: Dockerfile
docker/simulator/: Dockerfile
src/: clf.pkl  gdm_fe.py  gdm_server.py  gdm_simulator.py  requirements.txt
src/front_end/views/static/: login.js
src/front_end/views/template/: dashboard.html  login.html
src/protos/: BUILD.bazel  gdm.proto
studies/: GDM_Classifier.ipynb  GDM_cleaned.csv
