load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "gdm_proto",
    srcs = ["gdm.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "gdm_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "src/protos",
    proto = ":gdm_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "protos",
    embed = [":gdm_go_proto"],
    importpath = "src/protos",
    visibility = ["//visibility:public"],
)
